# Analizador_psicomotor_MediaPipe

./: .gitignore  CMakeLists copia.txt  CMakeLists.txt  CMakeLists1.txt  Doxyfile  LICENSE.txt  README_PFG.md  posevisualizer.cpp  posevisualizer.h  resources.qrc  videoCapture.py
 UML/: PFG.asta
 UML/Casos de uso/: Admin.html  Camara.html  Casos de Uso.html  Client.html  FitnessTrainer.html  MetricsHistoryRecord.html  Sistema.html  User.Cliente.html  User.html  package-frame.html  package-summary.html  package-tree.html  uml-Camara.html  uml-FitnessTrainer.html  uml-User.Cliente.html  uml-User.html
 UML/Diagrama Entidad Relacion/: DiagBD Usuarios Entidad-Relacion.html  Exercise_Sumary.html  FK.html  FisicalProfile.html  Medical_records.html  PK.html  SesionReport.html  State.html  TrainingSesion.html  UserPreferences.html  Users.html  admin.html  angle_constraint.html  client.html  client_workout_calendar.html  exercise_espec.html  fitnesstrainer.html  functional_records.html  general_records.html  lifeStyle_Record.html  morfological_records.html  package-frame.html  package-summary.html  package-tree.html  rom_records.html  states_Names.html  training_workout.html  transition.html  uml-Medical_records.html  uml-State.html  uml-UserPreferences.html  uml-angle_constraint.html  uml-client_workout_calendar.html  uml-fitnesstrainer.html  uml-morfological_records.html  uml-training_workout.html  workout_exercise_espec.html
 UML/Diagrama de Clases/: Admin.html  AngleCalculator.html  AngleConstraint.html  Client.html  Condition.html  CoreApp.html  Diagrama de Clases de Usuarios.html  ExerciseEspec.html  ExerciseSummary.html  Exersise.html  ExersiseCatalog.html  Feedback.html  FitnessTrainer.html  Map.html  MetricHistroryRecord.html  MetricsManager.html  PerformanceMetric.html  Pose.html  PoseAnalyser.html  PoseDetector.html  PreparadorFisico.html  TrainigWorkout.html  TrainingManager.html  TrainingSesion.html  Transition.html  UIController.html  User.html  UserDBManager.html  UserFactory.html  UserManager.html  UserPreferences.html  UsserCollection.html  VideoProcessor.html  Void.html  WorkoutCatalog.html  WorkoutSummary.html  datetime.html  package-frame.html  package-summary.html  package-tree.html  (+15 more)
 UML/Diagramas de Secuencia/: Admin.html  DBTable.html  FitnessTrainer.html  StateMachine.html  UC1 Alta de usuario.html  UC2 Consulta de datos de usuario.html  UC3 creacion de un plan de entrenamiento.html  UC5 DS Acceso a Métrcas de entrenamiento.html  UC7 DS captura y analisis de movimiento.html  UC8 DS Asignación de un plan de entrenamiento.html  appController.html  package-frame.html  package-summary.html  package-tree.html  uml-StateMachine.html
 UML/Diagramas de Secuencia del sistema (Not Review)/: UC3 (Not Review) DSS Creación de un plan de entrenamiento.html  UC4 (Not Review)DSS Iniciar sesión de entrenamiento.html  UC5 (Not Review)DSS Acceso a métricas personales.html  UC7 (Not Review)DSS captura y analisis de movimiento.html  package-frame.html  package-summary.html  package-tree.html
 UML/Modelo de Dominio/: Admin.html  AdminMainBoardWidget.html  AngleViewWidget.html  AppConfigWidget.html  AppController.html  Client.html  ClientProfile.html  CoreApp.html  DBManager.html  ExcerciseEspec.html  ExerciseSummary.html  Feedback.html  FitnessTrainer.Diagrama clases gestion clientes.html  FitnessTrainer.html  HeatMapWidget.html  LogViewerWidget.html  LoginManager.html  MainWindow.html  MetricsManager.html  Modelo Dominio UI.html  Modelo de Dominio CoreApp.html  Modelo de Dominio de Captura y Analisis de Movimiento _0.html  Modelo de Dominio de Entrenamientos.html  Modelo dominio de Gestion de Usuarios.html  PerformanceMetric.html  Pose.html  PoseAnalyser.html  PoseDetector.html  PoseManager.html  SoundFeedbackManager.html  State.html  StateMachine.html  TimeWidget.html  TrainerBoardWidget.html  TrainerClientInfoWidget.html  TrainerInfoWidget.html  TrainerMetricsMainWidget.html  TrainerWorkoutAssignWidget.html  TrainerWorkoutDesignWidget.html  TrainingManager.html  (+44 more)
PFGPy/: VideoCapture.py
UML/: Cliente_crearCliente(datos_ Map.html  List.html  PFG.asta  String.html  allclasses-frame.html  allclasses-noframe.html  alldiagrams-frame.html  alldiagrams-noframe.html  constant-values.html  date.html  deprecated-list.html  help-doc.html  index-all.html  index.html  map.Map.html  map.html  overview-frame.html  overview-summary.html  overview-tree.html  package-frame.html  package-list  package-summary.html  package-tree.html  uml-Cliente_crearCliente(datos_ Map.html  uml-date.html  uml-map.Map.html  uml-map.html  uml-vector.html  vector.html
UML/Casos de uso/: Admin.html  Camara.html  Casos de Uso.html  Client.html  FitnessTrainer.html  MetricsHistoryRecord.html  Sistema.html  User.Cliente.html  User.html  package-frame.html  package-summary.html  package-tree.html  uml-Admin.html  uml-Client.html  uml-MetricsHistoryRecord.html  uml-Sistema.html
UML/Diagrama Entidad Relacion/: DiagBD Usuarios Entidad-Relacion.html  Exercise_Sumary.html  FK.html  FisicalProfile.html  Medical_records.html  PK.html  SesionReport.html  State.html  TrainingSesion.html  UserPreferences.html  Users.html  admin.html  angle_constraint.html  client.html  client_workout_calendar.html  exercise_espec.html  fitnesstrainer.html  functional_records.html  general_records.html  lifeStyle_Record.html  morfological_records.html  package-frame.html  package-summary.html  package-tree.html  rom_records.html  states_Names.html  training_workout.html  transition.html  uml-Exercise_Sumary.html  uml-FK.html  uml-FisicalProfile.html  uml-PK.html  uml-Users.html  (+13 more)
Usuarios/: bdusuarios.cpp  bdusuarios.h  gestordeusuarios.cpp  gestordeusuarios.h  usuario.cpp  usuario.h
config/: poseConfig.json  schema.sql
macos/: Info.plist
mediapipePy/: VideoCapture.py  VideoTest.py
profiles/: admin.h  client.cpp  client.h  fitnesstrainer.cpp  fitnesstrainer.h  user.cpp  user.h  userdbmanager.cpp  userdbmanager.h  userfactory.cpp  userfactory.h  usermanager.cpp  usermanager.h  userpreferences.cpp
src/: main.cpp
test/: run_test.sh
(+1147 files in other folders)
